orchestration/archiver/deploy/manifests/prod/orchestration_archiver.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: archiver
  name: orchestration
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: archiver
  name: archiver
  namespace: orchestration
spec:
  ports:
  - port: 3000
  selector:
    app: archiver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: archiver
  name: archiver
  namespace: orchestration
spec:
  replicas: 10
  selector:
    matchLabels:
      app: archiver
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: archiver
        namespace: orchestration
    spec:
      containers:
      - env:
        - name: APP_ENVIRONMENT
          value: prod
        image: registry.digitalocean.com/gitops/archiver:archiver-v1.1.11
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 10
        name: archiver
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 16Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    jaeger-collector-host: observability-opentelemetry-collector.observability
    jaeger-sampler-param: "0.5"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: archiver
  name: archiver
  namespace: orchestration
spec:
  defaultBackend:
    service:
      name: archiver
      port:
        number: 3000
  rules:
  - host: archiver.do-gitops.tk
    http:
      paths:
      - backend:
          service:
            name: archiver
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - archiver.do-gitops.tk
    secretName: archiver-do-gitops-tk
